table report fix + text field wrap (#59)
* fix table height create empty pages
fix text fields does not wrap on long spaceless text.
added npm install to service make

* fix grid layout height

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -41,9 +41,13 @@ h1 {
       background-color: #ebebec;
     }
   }
-  .react-grid-item {
-    overflow: hidden;
-    transition: none;
-    z-index: 1;
+  .react-grid-layout {
+    height: auto !important; // override grid height
+    .react-grid-item {
+      overflow: hidden;
+      transition: none;
+      z-index: 1;
+      height: auto !important; // override grid item height to fit content
+    }
   }
 }
