--- a/src/components/Sections/SectionText.less
+++ b/src/components/Sections/SectionText.less
@@ -1,3 +1,5 @@
 .section-text {
   white-space: pre-wrap;
+  hyphens: auto;
+  word-break: break-word;
 }
